# inesdata-map-graph-engine

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg  setup.py  sonar-project.properties  tox.ini
config/: log.conf
dein/: Jenkinsfile  Jenkinsfile.cd  Jenkinsfile.hotfix  Jenkinsfile.mr  Jenkinsfile.release
docs/source/: conf.py  index.rst
inesdata_map/: config.ini  graph-generator.py
inesdata_map/output/: knowledge-graph.nt
kg_generation/: __init__.py  __main__.py  config.ini  deploy.py
kg_generation/etl/: process.py
kg_generation/logger/: __init__.py  logger.py
kg_generation/utils/: process.py
requirements/: requirements.in  requirements.txt
test/: __init__.py  kg-generation_tests.py
