[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kg-generation"
version = "0.1.0"
description = "A package to generate graphs."
authors = [{name = "Tu Nombre", email = "tuemail@example.com"}]
dependencies = []

[tool.setuptools]
packages = ["kg_generation"]

[tool.setuptools.entry-points]
console_scripts = [
    "kg-generation = kg_generation.graph_generator:main"
]
