[bumpversion]
commit = True
commit_args = -n
tag = False
current_version = 0.1.0.dev
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.(?P<release>[a-z]+))?
serialize =
	{major}.{minor}.{patch}.{release}
	{major}.{minor}.{patch}

[bumpversion:file:setup.py]

[bumpversion:file:sonar-project.properties]
search = sonar.projectVersion={current_version}
replace = sonar.projectVersion={new_version}

[bumpversion:part:release]
optional_value = gamma
values =
	dev
	gamma

[metadata]
name = kg-generation
url = https://dev-git.labs.gmv.com/gmv-bda/upm/inesdata-map/knowledge-graphs/kg-generation.git
project_urls =
	Documentation = A short summary
	Code = https://dev-git.labs.gmv.com/gmv-bda/upm/inesdata-map/knowledge-graphs/kg-generation.git
license =
author = Your name (or your organization/company/team)
author_email = Your name (or your organization/company/team)@gmv.com
description = A short description of the project.
long_description = file: Readme.md
long_description_content_type = text/markdown
classifiers =
	Operating System :: OS Independent
	Programming Language :: Python :: 3

[options]
packages = find:
package_dir = '' = kg_generation
include_package_data = true
python_requires = >= 3.8

[options.entry_points]
console_scripts =
	kg_generation = kg_generation.__main__:main

[pydocstyle]
convention = google
add-ignore = D100,D104
